apps/base/homepage/homepage-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-ingressroute
  namespace: homepage
  annotations:
    gethomepage.dev/href: "https://homepage.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Homepage"
    gethomepage.dev/description: "Cluster dashboard"
    gethomepage.dev/app: homepage
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons@main/png/homepage.png"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`homepage.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: homepage
          port: 3000
          scheme: http
  tls: {}
